# arcagi3

./: .env.example  .gitignore  AUTORESEARCH.md  CHANGELOG.md  CLAUDE.md  CURRENT_STATE.md  PROJECT.md  README.md  TODO.md  pyproject.toml  results.tsv
experiments/E001-baseline/: analysis.md  manifest.yaml  manual_probe.py  results.json  run_baseline.py
experiments/E003-analyzer-actor/: manifest.yaml  results.json  run_e003.py
experiments/E004-exploration/: manifest.yaml  results.json  run_e004.py
experiments/E014-reflector-baseline/: manifest.yaml  run_e014.py
experiments/E015-reflector-v2/: run_e015.py
experiments/E016-stagnation-fix/: run_e016.py
experiments/E017-perfect-info/: results.json  run_e017.py
experiments/E019-reflector-v3/: results.json  run_e019.py
experiments/E020-contextual-reflector/: run_e020.py
experiments/E021-enhanced-context/: results.json  run_e021.py
experiments/E022-systematic-explore/: results.json  run_e022.py
experiments/E023-multi-run/: run_e023.py
experiments/E024-plan-execute/: results.json  run_e024.py
experiments/E025-smart-explore/: results.json  run_e025.py
experiments/E026-multi-round/: results.json  run_e026.py
experiments/E027-massive-explore/: baseline_results.json  results.json  run_e027.py
golden/: g50t.md  ls20.md
issues/: I-001-bootstrap.md  I-001-setup-inicial.md  I-002-framework-alignment.md  I-002-upgrade-workflow.md  I-003-approach-design.md  I-004-autoresearch-multi-worker.md
research/: README.md
research/notes/: arc-agi-2-loading.md  arc-agi-3-toolkit.md  (+5 more)
scripts/: check_budget.sh
(+10 files in other folders)
